# omr-lab

./: .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  errors_openscore.txt  pyproject.toml
.github/workflows/: ci.yml
configs/: eval.yaml  pipeline_ai.yaml  pipeline_hybrid.yaml  pipeline_rules.yaml
data/annotations_pix/: links.csv  pages.csv
data/exclusions/: openscore.txt
src/omr_lab/common/: config.py  ir.py  logging.py  runctx.py
src/omr_lab/data/: coco.py  normalize.py  pdmx_export.py  qa.py  qa_ir.py  render.py  split.py  synth.py
src/omr_lab/eval/: compare.py  filelevel.py  report.py
src/omr_lab/omr_rules/: pipeline.py
src/omr_lab/render/: musescore.py  verovio.py
src/omr_lab/services/: cli.py  pipeline_registry.py  prepare.py
src/pdmx/: __init__.py
tests/: test_pdmx_export.py
